syntax = "proto3";

option java_package = "tornaco.apps.shortx.core.proto.settings";
option java_outer_classname = "OuterSettings";
option java_multiple_files = true;

import "google/protobuf/any.proto";


message DanmuUISettings {
  float alpha = 1;
  int32 backgroundColor = 2;
  int32 textColor = 3;
  int32 textSizeSp = 4;
  int64 duration = 5;
}

message OverlayButtonSetting {
  repeated google.protobuf.Any actions = 1;
  string icon = 2;
  int32 index = 3;
  string label = 4;
  string backgroundColor = 5;
  string iconTintColor = 6;

  repeated google.protobuf.Any longClickActions = 7;

  string note = 99;
  string id = 100;
}

enum OverlayOrientation {
  Port = 0;
  Land = 1;
}